# Mirai-Source-Code

./: .gitignore  CMakeLists.txt  README.md  attack-instructions.md  scanner-and-loader-instructions.md  setup-instructions.md
docker/docker-bot/: Dockerfile
docker/docker-metricbeat/: Dockerfile  metricbeat.yml
docker/x64-debug-telnet-binaries/: badbot  enc  nogdb  scanListen  single_load
loader/src/: main.c  server.c
mirai/: build.sh  demo-bot.sh  download-and-run-telnetd.sh  run-bot-2.sh  run-bot.sh
mirai/bot/: attack.c  attack.h  main.c  scanner.c  scanner.h  table.c  table.h
mirai/cnc/: admin.go
mirai/tools/: hello_world.c  single_load.c
scripts/: db.sql
